# SIGMA-Studio

./: .gitignore  AGENTS.md  VERSION  package.json
.opencode/Skills/AI/: sigma-ai.txt  sigma-analytics.txt  sigma-feature-engineering.txt  sigma-model-training.txt  sigma-predictive-maintenance.txt  sigma-signal-processing.txt  sigma-tinyml.txt
.opencode/Skills/Core/: sigma-api.txt  (+6 more)
apps/backend/: alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 16f4a32ac67c_cria_tabelas_iniciais.py
apps/backend/app/: main.py
apps/backend/app/api/: auth.py  devices.py  router.py
apps/backend/app/config/: settings.py
apps/backend/app/database/: session.py
apps/backend/app/models/: __init__.py  alert.py  analytics.py  configuration.py  device.py  devicestatus.py  event.py  log.py  role.py  sample.py  user.py
apps/backend/app/mqtt/: manager.py
apps/backend/app/repositories/: device_repository.py  user_repository.py
apps/backend/app/schemas/: __init__.py  auth.py  common.py  device.py
apps/backend/app/serial/: manager.py
apps/backend/app/services/: __init__.py  auth_service.py  device_service.py
apps/backend/app/utils/: auth.py
apps/backend/app/websocket/: manager.py
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.app.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/analytics/: service.py
backend/app/api/: devices.py
backend/app/config/: settings.py
backend/app/models/: __init__.py  device.py
docs/: MVP-Phase1.md  PRD.md
frontend/: package.json
frontend/src/: App.tsx
(+20 files in other folders)
