[project]
name = "sigma-studio"
version = "0.2.0"
description = "SIGMA Studio - Industrial Condition Monitoring Platform"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyserial>=3.5",
    "paho-mqtt>=2.0.0",
    "websockets>=15.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
